--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
     <!-- Sound Alerts -->
     <div class="hidden">
-        <audio src="backtowork.mp3" data-sound="pomodoro"></audio>
+        <audio src="C:\pomodoro-timer\backtowork.mp3" data-sound="pomodoro"></audio>
         <audio src="break.mp3" data-sound="shortBreak"></audio>
         <audio src="break.mp3" data-sound="longBreak"></audio>
     </div>
