audio file paths updated

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <!-- Sound Alerts -->
     <div class="hidden">
         <audio src="C:\pomodoro-timer\backtowork.mp3" data-sound="pomodoro"></audio>
-        <audio src="break.mp3" data-sound="shortBreak"></audio>
-        <audio src="break.mp3" data-sound="longBreak"></audio>
+        <audio src="C:\pomodoro-timer\break.mp3" data-sound="shortBreak"></audio>
+        <audio src="C:\pomodoro-timer\break.mp3" data-sound="longBreak"></audio>
     </div>
     <script src="main.js"></script>
 </body>
